<?xml version="1.0"?>
<package format="2">
  <name>teleop_twist_keyboard</name>
  <version>0.0.0</version>
  <description>Generic keyboard teleop for twist robots.</description>

  <maintainer email="rohan@osrfoundation.org">Rohan Agrawal</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>

  <author>Graylin Trevor Jay</author>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
